# simulation-control-interface

./: .env  .gitignore  Cargo.toml
frontend/: Cargo.toml  package-lock.json  package.json
frontend/js/: index.js
frontend/src/: lib.rs
frontend/static/: index.html
graphical_control_application/: Cargo.toml
graphical_control_application/src/: main.rs
models/: Cargo.toml
models/src/: lib.rs
simulation_control_interface/: Cargo.toml
simulation_control_interface/src/: main.rs
static_files/: homepage.html
storage_backend/: Cargo.toml
storage_backend/migrations/.2020-08-11-232315_interaction_history/: up.sql
storage_backend/migrations/2020-08-09-173947_create_users/: up.sql
storage_backend/migrations/2020-08-11-232315_interaction_history/: down.sql  up.sql
storage_backend/migrations/2020-08-13-221735_game_mode_options/: up.sql
storage_backend/migrations/2020-08-13-224626_interaction_history/: down.sql  up.sql
storage_backend/migrations/2020-08-25-212438_question_types/: down.sql  up.sql
storage_backend/migrations/2020-09-02-213700_abstract_encoding/: down.sql  up.sql
storage_backend/src/: lib.rs  models.rs  schema.rs
websocket_server/: Cargo.toml  certificate.p12  errors  origin_certificate.pem  private.key
websocket_server/src/: main.rs
yew-frontend/: Cargo.toml
yew-frontend/src/: lib.rs
