[package]
name = "graphical_control_application"
version = "0.1.0"
authors = ["robert-at-pretension-io <robert@pretension.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cursive = "0.15.0"
openssh = "0.8.0"
tokio = { version = "1", features = ["full"] }