[package]
name = "models"
version = "0.1.0"
authors = ["robert-at-pretension-io <robert@pretension.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = {version = "1.0.114", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4", "serde"]}
chrono = "0.4.19"
linked_hash_set = "0.1.4"
async-trait = "0.1.48"
anyhow = "1.0.40"
tokio = {version = "1.5.0", features = ["sync"]}
petgraph = "0.6.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "WebSocket",
    "MessageEvent",
    "BinaryType"
    ]

