[package]
name = "simulation_control_interface"
version = "0.1.0"
authors = ["robert-at-pretension-io <robert@pretension.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.3"
libmath = "0.2.1"
log = "0.4.8"
env_logger = "0.7.1"
vectors = "0.3.0"
plotters = "0.2.15"
gif = "0.10.3"
actix-web = "2.0"
actix-rt = "1.0"
dotenv = "0.15.0"
rand_xorshift = "0.2.0"
rand_pcg = "0.2.1"
rand_core = "0.5.1"
serde = "1.0.114"
chrono = {version = "0.4", features = ["serde", "clock"]}
storage_backend = {path = "../storage_backend"}
diesel = { version = "1.4.4", features = ["postgres"] }
