[package]
name = "websocket_server"
version = "0.1.0"
authors = ["robert-at-pretension-io <robert@pretension.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.11.0"
tokio = {version = "0.2.22", features = ["full"]}
actix-web = {version = "3.0.2"}
actix-rt = "1.1.1"
