[package]
name = "websocket_server"
version = "0.1.0"
authors = ["robert-at-pretension-io <robert@pretension.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.11.0"
tokio = {version = "0.2.22", features = ["full", "io-util" ]}
native-tls = "0.2.6"

futures = "0.3.5"
futures-util = "0.3.5"
tungstenite = "0.11.1"
tracing = {version = "0.1.21"}
tracing-futures = "0.2.4"
tracing-subscriber = {version = "0.2", features = ["fmt", "tracing-log"]}
tracing-log = "0.1.1"
log = "0.4"

uuid = { version = "0.8.1", features = ["v4", "serde"]}

serde = "1.0.117"


bincode = "1.3.1"
models = {path = "../models"}