[package]
name = "yew-frontend"
version = "0.1.0"
authors = ["robert-at-pretension-io <robert@pretension.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2"
js-sys = "0.3.45"
models = {path = "../models"}
tungstenite = "0.11.1"

bincode = "1.3.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "console",
    ]
