[package]
name = "yew-frontend"
version = "0.1.0"
authors = ["robert-at-pretension-io <robert@pretension.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3.45"
models = {path = "../models"}

console_error_panic_hook = "0.1.6"

bincode = "1.3.1"
uuid = { version = "0.8.1", features = ["v4", "serde"]}

yewtil = {version = "0.3.2", features = ["future"]}

wasm-bindgen-futures = "0.4.19"

[dependencies.web-sys]
version = "0.3"
features = [
    "WebSocket",
    "MessageEvent",
    "BinaryType",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcOfferOptions",
  "RtcRtpTransceiver",
  "RtcRtpTransceiverDirection",
  "RtcRtpReceiver",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "MediaDevices",
  "Navigator",
  "Window",
  "MediaTrackSupportedConstraints",
  "MediaStreamConstraints",
  "MediaStream",
  "HtmlMediaElement",
  "MediaStreamTrack",
  "RtcRtpSender",
  "RtcTrackEvent",
  "Node",
  "Element",
  "RtcConfiguration",
  "RtcIceServer",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcSignalingState"
    ]
